Update nav bar on contact page

--- a/contact.html
+++ b/contact.html
@@ -22,33 +22,39 @@
 </head>
 
 <body>
-    <!-- Nav Menu Section Code from Bootstrap -->
+    <!-- Nav Menu Section Code from Bootstrap-->
     <div class="site-header"> 
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Franciska Du Toit
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+	<nav class="navbar navbar-expand-md fixed-top navbar-dark ">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="index.html">Franciska Du Toit</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse " id="navbarNav" >
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown show">
+                        <a class=" dropdown-toggle nav-link" href="#portfolio" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="uichallenges.html">UI Challenges</a>
+                            <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
+                            <a class="dropdown-item" href="codingprojects.html">Developer Portfolio</a>
+                            <a class="dropdown-item" href="otherprojects.html">Other Projects</a>
+                        </div>
+                    </li>
+					<li class="nav-item">
+						<a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact2.html">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
     </div>
     <!-- Nav Menu end -->
     <div class="container">
