--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
                         </div>
                     </li>
 					<li class="nav-item">
-						<a class="nav-link" href="about2.html">About</a>
+						<a class="nav-link" href="about.html">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact2.html">Contact</a>
+						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
