Update form section on contact page

--- a/contact.html
+++ b/contact.html
@@ -87,29 +87,15 @@
             <!-- Banner section End -->
 
     <!-- Content section -->
-    <section class="personal-content">
-        <section class="personal-section">
-            <div class="container-fluid container-custom">
-                <div class="row">
-                    <div class="col-sm-12">
-                    <!-- Hero Image for Mobile & Tablet -->
-                        <div class="hero-image-mobile" style="background-image: url(assets/images/franciska_du_toit_contactpage.jpg);">
-                        </div>
-                    <!-- Hero Image for Mobile & Tablet end-->
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Content form -->
-        <section class="personal-section">
-            <div class="container-fluid container-custom">
-                <div class="row ">
-                    <div class="col-12">
-                        <!-- Content form heading -->
-                        <div class="portfolio-text-container">
-                            <h2 class="portfolio-heading" >
+    <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
+                <div class="container-fluid container-custom">
+                    <div class="row">
+                        <div class="col-sm-12 intro-content">
+                            <!-- Content form heading -->
+                        <div >
+                            <h1 class="contact-heading">
                             Get in touch 
-                            </h2>
+                            </h1>
                         </div>
                         <!-- Content form heading -->
                         <!-- Form -->
@@ -121,9 +107,10 @@
                                 <textarea rows="3" name="message" id="message" class="form-control" placeholder="Message" required=""></textarea>
                                 <div class="form-row text-center">
                                     <div class="col contact-btn-container">
-                                    <button type="submit" id="contact-btn" class="btn ">Send Message</button>
+                                    <button type="submit" class="btn contact-btn">Send Message</button>
                                     </div>
                                 </div>
+                                
                             </form>
                         </div>
                         <!-- Form End -->
