--- a/contact.html
+++ b/contact.html
@@ -114,24 +114,38 @@
                             </form>
                         </div>
                         <!-- Form End -->
+                        <!-- Linkedin contact link -->
+                        <div class="msg-btn-container" >
+                            <div class="btn" id="msg-btn" >
+                                <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" class="list-btn-item list-btn-item-secondary ">Message me on LinkedIn
+                                </a>
+                            </div>
+                        </div>
+                        <!-- Linkedin contact link end -->
+                        <!-- Social media banner -->
+                        <div class="row banner-imager-social-contact" id="social-banner-hide-sm">
+                            <div class="col-3 col-sm-3 col-md-2">
+                                <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank"> <i class="fab fa-linkedin-in "></i> </a>
+                            </div>
+                            <div class="col-3 col-sm-3 col-md-2">
+                                <a href="https://www.instagram.com/designed.byfranciska/" target="_blank"> <i class="fab fa-instagram "></i> </a> 
+                            </div>
+                            <div class="col-3 col-sm-3 col-md-2">
+                                <a href="https://twitter.com/FranciskaDuToit" target="_blank"> <i class="fab fa-twitter "></i> </a> 
+                            </div>
+                            <div class="col-3 col-sm-3 col-md-2">
+                                <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank"> <i class="fab fa-pinterest-p "></i> </a> 
+                            </div>
+                        </div>
+                        <!-- Social media banner end -->
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- Social Footer for mobile and tablet end -->
-        <section class="hero-image-footer-mobile">
-            <ul class="social-list">
-                <li><a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
-                <li><a href="https://www.instagram.com/designed.byfranciska/" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://twitter.com/FranciskaDuToit" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
-            </ul>
-        </section>
-        <!-- Social Footer for mobile and tablet end -->
-        <!-- Personal info end -->
-    </section>
-    <!-- Content section end -->
+            </div>         
+        </div>
+        <!-- Content section end -->
     </div>
+    </div>
+
 <!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
