Add images to asset folder for projects and create structure for ui page

--- a/uichallenges.html
+++ b/uichallenges.html
@@ -85,3 +85,116 @@
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
+            <!-- Content Section -->
+            <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
+                <div class="container-fluid container-custom">
+                    <div class="row">
+                        <div class="intro-content">
+                            <!-- Intro text end-->
+                            <h1 class="ui-heading" >UI Challenges </h1>
+                            <p class="ui-text" >Here are just a few the UI Design projects I worked on. These projects are inspired by the Daily UI Challenge - which is a series of daily design challenges.</p>
+                            <!-- Intro text end-->
+                        </div>
+                        <div class="container ui-container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="container">
+                                        <!-- Sign Up page-->
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-4 ui-content">
+                                                <h2 class="ui-subheading">Sign Up Page
+                                                </h2>
+                                                <p class="ui-text">
+                                                <b>App:</b>  Travel <br>
+                                                <b>Task:</b> Create a Sign up page
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-8 ui-image">
+                                                <img src="assets/images/franciska_du_toit_ui_signup.png" class="ui-img" alt="app sign-up page">
+                                            </div>
+                                        </div>
+                                        <!-- Sign Up page end-->
+                                        <!-- Payment page -->
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-4 ui-content">
+                                                <h2 class="ui-subheading">Payment Page
+                                                </h2>
+                                                <p class="ui-text">
+                                                <b>App:</b>  E-commerce <br>
+                                                <b>Task:</b> Create a Payment page
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-8 ui-image">
+                                            <img src="assets/images/franciska_du_toit_ui_payment.png" class="ui-img" alt="app payment page">
+                                            </div>
+                                        </div>
+                                        <!-- Payment page end-->
+                                        <!-- Landing page -->
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-4 ui-content">
+                                                <h2 class="ui-subheading">Landing Page
+                                                </h2>
+                                                <p class="ui-text">
+                                                <b>App:</b>  Wine E-commerce <br>
+                                                <b>Task:</b> Create a Landing page
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-8 ui-image">
+                                            <img src="assets/images/franciska_du_toit_ui_landing.png" class="ui-img" alt="wine e-commerce app screen">
+                                            </div>
+                                        </div>
+                                        <!-- Landing page end-->
+                                        <!-- Calculator -->
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-4 ui-content">
+                                                <h2 class="ui-subheading">Financial Calculator
+                                                </h2>
+                                                <p class="ui-text">
+                                                <b>App:</b>  Calculator <br>
+                                                <b>Task:</b> Create a Calculator
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-8 ui-image">
+                                            <img src="assets/images/franciska_du_toit_ui_calculator.png" class="ui-img" alt="calculator screen">
+                                            </div>
+                                        </div>
+                                        <!-- Calculator end -->
+                                        <!-- Profile page -->
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-4 ui-content">
+                                                <h2 class="ui-subheading">Profile Page
+                                                </h2>
+                                                <p class="ui-text">
+                                                <b>App:</b>  Recipe Sharing App<br>
+                                                <b>Task:</b> Create a Profile page
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-8 ui-image">
+                                            <img src="assets/images/franciska_du_toit_ui_profile.png" class="ui-img" alt="app profile">
+                                            </div>
+                                        </div>
+                                        <!-- Profile page -->
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-4 ui-content">
+                                                <h2 class="ui-subheading">Settings Page
+                                                </h2>
+                                                <p class="ui-text">
+                                                <b>App:</b>  Travel Planning App <br>
+                                                <b>Task:</b> Create a Settings page
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-8 ui-image">
+                                            <img src="assets/images/franciska_du_toit_ui_setting.png" class="ui-img" alt="app setting screen">
+                                            </div>
+                                        </div>
+                                        <!-- Profile page -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+            <!-- Content Section -->
+        </div>
+    </div>
