Add content layout for ux page

--- a/uxcasestudies.html
+++ b/uxcasestudies.html
@@ -85,3 +85,42 @@
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
+            <!-- Content Section -->
+            <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
+                <div class="container-fluid container-custom">
+                    <div class="row">
+                        <div class="col-12">
+                        <div class="intro-content">
+                            <!-- Intro text end-->
+                            <h1 class="ux-heading" > UX Case Studies </h1>
+                            <p >Here you will find my UX Design case studies.  </p>
+                            <!-- Intro text end-->
+                        </div>
+                        </div>
+                        <div class="container ui-container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="container">
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-8 ui-image">
+                                                <img src="assets/images/franciska_du_toit_flyuxmobile-project.png" class="ui-img" alt="app sign-up page">
+                                            </div>
+                                            <div class="col-sm-12 col-md-4">
+                                                <h2 class="ui-subheading">UX Design & Prototyping for Airline App
+                                                </h2>
+                                                <p class="ui-text">
+                                                Coming Soon – This case study is still being written
+                                                </p>
+                                                
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+            <!-- Content Section -->
+        </div>
+    </div>
