Update link to developer project page

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="uichallenges.html">UI Challenges</a>
                             <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
-                            <a class="dropdown-item" href="codingprojects.html">Developer Portfolio</a>
+                            <a class="dropdown-item" href="developerprojects.html">Developer Portfolio</a>
                             <a class="dropdown-item" href="otherprojects.html">Other Projects</a>
                         </div>
                     </li>
