Add content section to developer page

--- a/developerprojects.html
+++ b/developerprojects.html
@@ -85,3 +85,44 @@
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
+
+            <!-- Content Section -->
+            <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
+                <div class="container-fluid container-custom">
+                    <div class="row">
+                        <div class="col-12">
+                        <div class="intro-content">
+                            <!-- Intro text end-->
+                            <h1 class="ux-heading" > Developer portfolio </h1>
+                            <p > I have recently started my journey as a software developer. Check out my latest software development portfolio projects</p>
+                            <!-- Intro text end-->
+                        </div>
+                        </div>
+                        <div class="container ui-container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="container">
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-4">
+                                                <h2 class="ui-subheading">Resume website
+                                                </h2>
+                                                <p class="code-text">
+                                                As part of the Full-stack Developer course at Code Institute, we did a mini-project to creat a resume site. 
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-8 code-image">
+                                                <a href="https://franciskadtt.github.io/ucd-resume/" target="_blank">
+                                                    <img src="assets/images/franciska_du_toit_codingproject1.png" class="code-img" alt="resume website">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+            <!-- Content Section -->
+        </div>
+    </div>
