--- a/otherprojects.html
+++ b/otherprojects.html
@@ -57,3 +57,31 @@
 	</nav>
     </div>
     <!-- Nav Menu end -->
+
+    <div class="container-fluid">
+		<div class="row" >
+            <!-- Banner section -->
+			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
+                <!-- Hero-image -->
+				<div class="row">
+					<img class="banner-image" src="./assets/images/franciska_du_toit_otherprojects.jpg"/>
+                </div>
+                <!-- Hero-image end -->
+                <!-- Social Banner -->
+                <div class="row banner-imager-social" >
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a> <i class="fab fa-linkedin-in "></i> </a>
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a> <i class="fab fa-instagram "></i> </a> 
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a> <i class="fab fa-twitter "></i> </a> 
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a> <i class="fab fa-pinterest-p "></i> </a> 
+                    </div>
+                </div>
+                <!-- Social Banner end -->
+            </div>
+            <!-- Banner section End -->
