Add content for other project page

--- a/otherprojects.html
+++ b/otherprojects.html
@@ -85,3 +85,78 @@
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
+            <!-- Content Section -->
+            <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
+                <div class="container-fluid container-custom">
+                    <div class="row">
+                        <div class="col-12">
+                        <div class="intro-content">
+                            <!-- Intro text end-->
+                            <h1 class="ux-heading" > Other Projects </h1>
+                            <p class="sub-paragraph"> Over the last few years I have been working on a variety of projects either part of my previous roles or on the side. Here you will find some of those projects.</p>
+                            <!-- Intro text end-->
+                        </div>
+                        </div>
+                        <div class="container ui-container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="container">
+                                        <div class="row ui-row">
+                                            <div class="col-sm-12 col-md-12">
+                                                <h2 class="other-subheading">Project Synergy at Sanlam
+                                                </h2>
+                                                <p class="other-text">
+                                                I was part of a team that researched, designed and presented a project for a central portal where all departments within Sanlam can add their projects, to ensure there is no duplication, enable participation, ensure compliance and promote cost effectiveness. 
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-12 ">
+                                                <img src="assets/images/franciska_du_toit_synergyproject.png" class="code-img" alt="project synergy screenshot">
+                                            </div>
+                                        </div>
+                                        <div class="row ui-row ">
+                                            <div class="col-sm-12 col-md-12">
+                                                <h2 class="other-subheading">Fincede Business Website
+                                                </h2>
+                                                <p class="other-text">
+                                                I designed my first site for a business on Wordpress for Fincede Finacial Services. This project help me understand the basics of website layouts and design.
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-12 ">
+                                                <img src="assets/images/franciska_du_toit_fincedeproject.png" class="code-img" alt="fincede website">
+                                            </div>
+                                        </div>
+                                        <div class="row ui-row ">
+                                            <div class="col-sm-12 col-md-12">
+                                                <h2 class="other-subheading">Sanlam Conversations with Clients Project
+                                                </h2>
+                                                <p class="other-text">
+                                                A colleague and I started a webinar series about topical issues in the financial industry and we reached over a 1000 people. I also designed the marketing material for the series.
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-12 ">
+                                                <img src="assets/images/franciska_du_toit_conversationsproject.png" class="code-img" alt="fincede website">
+                                            </div>
+                                        </div>
+                                        <div class="row ui-row ">
+                                            <div class="col-sm-12 col-md-12">
+                                                <h2 class="other-subheading">Leasing Hub at Quadient
+                                                </h2>
+                                                <p class="other-text">
+                                                I designed and developed a sharepoint site as a central hub for information and learning material for account managers. I also wrote a few articles for the site and designed the marketing material.
+                                                </p>
+                                            </div>
+                                            <div class="col-sm-12 col-md-12 ">
+                                                <img src="assets/images/franciska_du_toit_leasehubproject.png" class="code-img" alt="fincede website">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+            <!-- Content Section end -->
+        </div>
+    </div>
+			
