Fix link to developer page on home page

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                                 <a href="uxcasestudies.html" class="hvr-sweep-to-bottom"><span>UX Case Studies</span></a>
                                             </li>
                                             <li class="col-6 list-inline-item menu-color-code menu-item">
-                                                <a href="codingprojects.html" class="hvr-sweep-to-bottom"><span>Developer Portfolio</span></a>
+                                                <a href="developerprojects.html" class="hvr-sweep-to-bottom"><span>Developer Portfolio</span></a>
                                             </li>
                                             <li class="col-6 list-inline-item menu-color-other menu-item">
                                                 <a href="otherprojects.html" class="hvr-sweep-to-bottom"><span>Other Projects</span></a>
