--- a/uxcasestudies.html
+++ b/uxcasestudies.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Franciska Du Toit Personal and Portfolio Website">
     <meta name="keywords" content="Franciska Du Toit, Franciska Du Toit website">
