Fix link on home page to correctly go to about page

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <!-- Button to about page -->
                     <div class="about-btn-container">
                         <div class="btn">
-                            <a href="about2.html" class="list-btn-item list-btn-item-secondary ">More about me
+                            <a href="about.html" class="list-btn-item list-btn-item-secondary ">More about me
                             </a>
                         </div>
                     </div>
