Add additional code credits

--- a/about.html
+++ b/about.html
@@ -302,7 +302,7 @@
                                 <!-- Qualifications completed end -->
                             </div>
                             <!-- Qualifications End -->
-                            <!-- CV pdf download -->
+                            <!-- CV pdf download- Original credit with modifications: Code Institute Lessons on UCD Resume */-->
                             <div>
                                 <p class="cv-text">Download a full PDF version of my CV
                                     <a href="assets/documents/franciska-du-toit-cv-2021.pdf" target="_blank" class="cv-pdf">
