--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                         <!-- Personal Info Bullets End ------->
                     </div>
                     </div>
-                    <!-- Button to about page -->
+                    <!-- Link to about page -->
                     <div class="about-btn-container">
                         <div class="btn">
                             <a href="about.html" class="list-btn-item list-btn-item-secondary ">More about me
                             </a>
                         </div>
                     </div>
-                    <!-- Button to about page end -->
+                    <!-- Link to about page end -->
                         
                         <!-- Quote ---------------------->
                         <div class="quote-container">
@@ -160,7 +160,7 @@
                                 </p>
                             </div>
                     <!-- Intro text end-->
-                    <!--Blocks to projects -->
+                    <!--Blocks to projects - orginal code Bootstrap4 project Code Institute with modifications -->
                             <div class="container-fluid blocks">
                                 <div class="row">
                                     <div class="col nav-container">
