--- a/otherprojects.html
+++ b/otherprojects.html
@@ -64,7 +64,7 @@
 			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
                 <!-- Hero-image -->
 				<div class="row">
-					<img class="banner-image" src="./assets/images/franciska_du_toit_otherprojects.jpg"/>
+					<img class="banner-image" src="./assets/images/franciska_du_toit_otherprojects.jpg" alt="Stationary on table"/>
                 </div>
                 <!-- Hero-image end -->
                 <!-- Social Banner -->
