--- a/about.html
+++ b/about.html
@@ -71,16 +71,16 @@
                 <!-- Social Banner -->
                 <div class="row banner-imager-social" >
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank"> <i class="fab fa-linkedin-in "></i> </a>
+                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank"> <i class="fab fa-instagram "></i> </a> 
+                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://twitter.com/FranciskaDuToit" target="_blank"> <i class="fab fa-twitter "></i> </a> 
+                        <a href="https://twitter.com/FranciskaDuToit" target="_blank"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank"> <i class="fab fa-pinterest-p "></i> </a> 
+                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
                     </div>
                 </div>
                 <!-- Social Banner end -->
